[metadata]
name = graphql-scoreboard
version = 0.0.1
author = Chopik
author_email = ch0p1k3@yandex.ru
description = graphql-scoreboard
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
install_requires =
    aiohttp
    click
    strawberry-graphql[debug-server]
    simple-term-menu
    gql[all]
